welcome.lessons.welcome.bat.bool1.NearHundred.scala.error
nearHundred:3: error: value =< is not a member of Int
if (n=<100 && n>=90) {
     ^nearHundred:8: error: value =< is not a member of Int
else if (n=<200 && n>==190) {
          ^